--- a/action.yaml
+++ b/action.yaml
@@ -33,3 +33,6 @@ inputs:
   password:
     description: "Password that goes with the sonar.login username. This should be left blank if an authentication token is being used."
     required: false
+  javaBinaries:
+    description: "Property to set java binaries."
+    required: false
